openshift/gogs-shotgun-deploy.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    description: Exposes the database server
  name: gogs-postgresql
spec:
  ports:
  - name: postgresql
    port: 5432
    targetPort: 5432
  selector:
    name: gogs-postgresql
---
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  annotations:
    description: Defines how to deploy the database
  name: gogs-postgresql
  labels:
    app: gogs
    app.kubernetes.io/part-of: gogs
spec:
  replicas: 1
  selector:
    name: gogs-postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: gogs-postgresql
      name: gogs-postgresql
    spec:
      serviceAccountName: gogs-sa
      containers:
      - env:
        - name: POSTGRESQL_USER
          value: gogs
        - name: POSTGRESQL_PASSWORD
          value: gogs
        - name: POSTGRESQL_DATABASE
          value: gogs
        - name: POSTGRESQL_MAX_CONNECTIONS
          value: "100"
        - name: POSTGRESQL_SHARED_BUFFERS
          value: 12MB
        - name: POSTGRESQL_ADMIN_PASSWORD
          value: gogs
        image: ''
        livenessProbe:
          initialDelaySeconds: 30
          tcpSocket:
            port: 5432
          timeoutSeconds: 1
        name: postgresql
        ports:
        - containerPort: 5432
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - psql -h 127.0.0.1 -U gogs -q -d gogs -c 'SELECT 1'
          initialDelaySeconds: 5
          timeoutSeconds: 1
        resources:
          limits:
            memory: 512Mi
        volumeMounts:
        - mountPath: /var/lib/pgsql/data
          name: gogs-postgres-data
      volumes:
      - name: gogs-postgres-data
        emptyDir: {}
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - postgresql
      from:
        kind: ImageStreamTag
        name: postgresql:10
        namespace: openshift
    type: ImageChange
  - type: ConfigChange
---
kind: Service
apiVersion: v1
metadata:
  annotations:
    description: The Gogs server's http port
    service.alpha.openshift.io/dependencies: '[{"name":"gogs-postgresql","namespace":"","kind":"Service"}]'
  labels:
    app: gogs
  name: gogs
spec:
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  - name: 2222-tcp
    port: 2222
    protocol: TCP
    targetPort: 2222
  selector:
    app: gogs
    deploymentconfig: gogs
  sessionAffinity: None
  type: ClusterIP
---
kind: Route
apiVersion: route.openshift.io/v1
id: gogs-http
metadata:
  annotations:
    description: Route for application's http service.
  labels:
    app: gogs
  name: gogs
spec:
  host: gogs.apps.core-ocp.lab.kemo.network
  port:
    targetPort: 3000-tcp
  to:
    name: gogs
---
kind: Route
apiVersion: route.openshift.io/v1
id: gogs-ssh
metadata:
  annotations:
    description: Route for application's ssh service.
  labels:
    app: gogs
  name: gogs-ssh
spec:
  host: ssh-gogs.apps.core-ocp.lab.kemo.network
  port:
    targetPort: 2222-tcp
  to:
    name: gogs
---
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  labels:
    app: gogs
    app.kubernetes.io/part-of: gogs
  name: gogs
spec:
  replicas: 1
  selector:
    app: gogs
    deploymentconfig: gogs
  strategy:
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gogs
        deploymentconfig: gogs
    spec:
      serviceAccountName: gogs-sa
      securityContext:
        runAsUser: 1
        runAsGroup: 1
      containers:
      - image: " "
        imagePullPolicy: Always
        name: gogs
        ports:
        - containerPort: 3000
          protocol: TCP
        - containerPort: 2222
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        volumeMounts:
        - name: gogs-data
          mountPath: /opt/gogs/data
        - name: gogs-config
          mountPath: /etc/gogs/conf
        readinessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 3
            timeoutSeconds: 1
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 3
        livenessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 3
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: gogs-data
        emptyDir: {}
      - name: gogs-config
        configMap:
          name: gogs-config
          items:
            - key: app.ini
              path: app.ini
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - gogs
      from:
        kind: ImageStreamTag
        name: gogs:v0.12.4
    type: ImageChange
